Add calculation of totalTimeSpentByDays and totalTimeSpentOnTaskInMinutesByPeriod